# OpenVR_HMD-less_Tracking_Library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pluginConnector.cs  steam  vr config.txt
Unity/: IUnityInterface.h
Unity Tracking Base Project/Assets/Materials/: Magenta.mat  Orange.mat
Unity Tracking Base Project/Assets/Prefabs/: Cameras.prefab
Unity Tracking Base Project/Assets/Scenes/: Scene.unity
Unity Tracking Base Project/Assets/Scripts/: PlayerMovement.cs  PluginConnector.cs  doublescreenCameramanager.cs
Unity Tracking Base Project/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
includes/: VrSystem.hpp  debug.hpp  main.hpp  structs.hpp  utils.hpp
src/: VrSystem.cpp  debug.cpp  main.cpp  utils.cpp
